(WIP) refactor, fixes, tests, Bearer auth in Swagger UI
