# internal/service/handler/categories.go
@@ -23,7 +23,7 @@ func (h *Handler) CategoriesCreate(w http.ResponseWriter, r *http.Request) {
 	// decode request params:
 	params := &categoriesCreateParams{}
 	if err := json.NewDecoder(r.Body).Decode(params); err != nil {
-		httpresp.Render(w, response.InvalidRequest)
+		httpresp.Render(w, response.InvalidRequestBodyFormat)
 		return
 	}
 
@@ -33,13 +33,8 @@ func (h *Handler) CategoriesCreate(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	// extract current user's username from claims:
-	username, err := h.JWTAuthority.ExtractUsername(r.Context())
-	if err != nil {
-		h.internalServerErrorLogger.Println(err)
-		httpresp.Render(w, response.InternalServerError)
-		return
-	}
+	// extract current user's username from context:
+	username := r.Context().Value("username").(string)
 
 	// fetch current user from the database:
 	user := &database.User{}
@@ -79,13 +74,8 @@ type categoryResponse struct {
 //type categoriesGetResponse []categoryResponse
 
 func (h *Handler) CategoriesGet(w http.ResponseWriter, r *http.Request) {
-	// extract current user's username from claims
-	username, err := h.JWTAuthority.ExtractUsername(r.Context())
-	if err != nil {
-		h.internalServerErrorLogger.Println(err)
-		httpresp.Render(w, response.InternalServerError)
-		return
-	}
+	// extract current user's username from context
+	username := r.Context().Value("username").(string)
 
 	// fetch current user from the database:
 	user := &database.User{}
@@ -132,7 +122,7 @@ func (h *Handler) CategoriesUpdate(w http.ResponseWriter, r *http.Request) {
 	// decode request params:
 	params := &categoriesUpdateParams{}
 	if err := json.NewDecoder(r.Body).Decode(params); err != nil {
-		httpresp.Render(w, response.InvalidRequest)
+		httpresp.Render(w, response.InvalidRequestBodyFormat)
 		return
 	}
 
@@ -157,14 +147,8 @@ func (h *Handler) CategoriesUpdate(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	// extract current user's username from claims:
-	username, err := h.JWTAuthority.ExtractUsername(r.Context())
-	if err != nil {
-		http.Error(w, http.StatusText(http.StatusInternalServerError), http.StatusInternalServerError)
-		h.internalServerErrorLogger.Println(err)
-		httpresp.Render(w, response.InternalServerError)
-		return
-	}
+	// extract current user's username from context:
+	username := r.Context().Value("username").(string)
 
 	// fetch current user:
 	user := &database.User{}
@@ -219,13 +203,8 @@ func (h *Handler) CategoriesDelete(w http.ResponseWriter, r *http.Request) {
 		return
 	}
 
-	// extract current user's username from claims
-	username, err := h.JWTAuthority.ExtractUsername(r.Context())
-	if err != nil {
-		h.internalServerErrorLogger.Println(err)
-		httpresp.Render(w, response.InternalServerError)
-		return
-	}
+	// extract current user's username from context
+	username := r.Context().Value("username").(string)
 
 	// fetch current user from the database:
 	user := &database.User{}
