# internal/service/handler/model/model.go
@@ -2,7 +2,7 @@ package model
 
 // Error represents error response model.
 type Error struct {
-	ErrorMessage string `json:"error_message" example:"today is a sunny day so I decided to go for a walk instead of serving your requests"`
+	ErrorMessage string `json:"error_message" example:"example error message (who cares)"`
 }
 
 // NewError creates a new instance of [Error] and returns pointer to it.
